@@ -1,6 +1,11 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2012-06-20  Dirk Schulze  <dschulze@adobe.com>
+
+- add description of mix function
+- add first graphic for processing model of mix
+
 2012-06-19  Dirk Schulze  <dschulze@adobe.com>
 
 - added new paragraph about fragmentShader attribute
